--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,1 +1,7 @@
 ---
+cribl_edge_leader: https://cribl-leader.local.domain
+cribl_edge_fleet: default_fleet
+cribl_edge_token: tokenTokentoken
+cribl_edge_user: cribl
+cribl_edge_group: cribl
+cribl_edge_install_dir: '%2Fopt%2Fcribl' # /opt/cribl
