--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
 callbacks_enabled=ansible.posix.profile_tasks
 interpreter_python=auto_silent
-debug=Flase
+deprecation_warnings=False
+debug=False
