--- a/roles/ansible_cribl_edge/meta/main.yml
+++ b/roles/ansible_cribl_edge/meta/main.yml
@@ -9,18 +9,27 @@ galaxy_info:
   platforms:
     - name: EL
       versions:
-        - "all"
+        - "7"
+        - "8"
+        - "9"
     - name: Fedora
       versions:
-        - "all"
+        - "38"
+        - "39"
+        - "40"
+        - "41"
     - name: Debian
       versions:
-        - "all"
+        - "bookworm"
+        - "bullseye"
     - name: Ubuntu
       versions:
-        - "all"
+        - "noble"
+        - "jammy"
+        - "focal"
   galaxy_tags:
     - linux
+    - observability
 
 dependencies: []
 
